<resources>
    <string name="app_name">StoryApp</string>
    <string name="splash_screen">splash screen</string>
    <string name="must_not_empty">Tidak boleh kosong</string>
    <string name="type_email_not_valid">Format email tidak valid</string>
    <string name="input_password_description">Masukkan kata sandi</string>
    <string name="input_name_description">Nama lengkap harus diisi</string>
    <string name="kata_sandi_wajib_lebih_dari_6">Kata sandi wajib lebih dari 6</string>
    <string name="daftar">Daftar</string>
    <string name="buat_akun_baru">Buat akun baru</string>
    <string name="masuk">Masuk</string>
    <string name="belum_punya_akun">Belum punya akun?</string>
    <string name="masukan_email">example@gmail.com</string>
    <string name="keluar">Keluar</string>
    <string name="tambah_story">Tambah Story</string>
    <string name="gambar_story">Gambar story</string>
    <string name="nama">Nama</string>
    <string name="nama_pengguna">Nama Pengguna</string>
    <string name="deskripsi">Deskripsi</string>
    <string name="data_tidak_tersedia">Data tidak tersedia</string>
    <string name="failed_login">Permintaan Masuk Gagal</string>
    <string name="kamera">Kamera</string>
    <string name="galeri">Galeri</string>
    <string name="description_alert_logout">Yakin ingin keluar?</string>
    <string name="empty_image">Silahkan masukkan berkas gambar terlebih dahulu</string>
    <string name="logo_aplikasi">Logo Aplikasi</string>
    <string name="timeout">Timeout</string>
    <string name="muat_ulang">Muat Ulang</string>
    <string name="unggah">Mengunggah</string>
    <string name="email">Email</string>
    <string name="kata_sandi">Kata Sandi</string>
    <string name="bahasa">Bahasa</string>
    <string name="image_story">gambar_story</string>
    <string name="balas">BALAS</string>
    <string name="baru_saja">Baru saja</string>
    <string name="muzammilul_muttaqin">Muzammilul Muttaqin</string>
    <string name="tombol_kembali">tombol_kembali</string>
    <string name="icon_balas">icon_balas</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="maps">Maps</string>
    <string name="normal_type">Normal</string>
    <string name="satellite_type">Satellite</string>
    <string name="terrain_type">Terrain</string>
    <string name="hybrid_type">Hybrid</string>
    <string name="message_conection">Koneksi anda buruk</string>
    <string name="maps_success">Maps Success</string>
    <string name="load_maps">load_maps</string>
    <string name="upload">upload</string>
    <string name="emoticon">emoticon</string>
    <string name="tambahkan_deskripsi">Tambahkan Deskripsi</string>
    <string name="icon_galeri">ketuk untuk ambil foto</string>
    <string name="capture_image">capture image</string>
    <string name="flip_camera">flip_camera</string>
    <string name="tambah_lokasi">Tambah Lokasi</string>
    <string name="title_warning">Peringatan</string>
    <string name="ok">Okay</string>
    <string name="title_info">Informasi</string>
    <string name="message_register_success">Register Success</string>
    <string name="continue_">Lanjut</string>
    <string name="sudah_terdaftar">Sudah terdaftar</string>
    <string name="message_story">Sukses upload story</string>
    <string name="message_photo">Foto wajib diisi</string>
    <string name="message_upload">Apakah Anda yakin ingin mengunggah cerita ini?</string>
    <string name="yes">Ya</string>
    <string name="message_login_success">Login sukses</string>
    <string name="message_emailpass_invalid">Kata sandi atau email Anda tidak valid</string>
    <string name="image_eror">image eror</string>
    <string name="message_eror">Server eror\nAn error occurred while fetching server data.</string>
    <string name="error_validation">Please make sure all the input field is correct!</string>
    <string name="register">Daftar</string>
    <string name="invalid_email">Email tidak valid</string>
    <string name="invalid_name">Nama tidak valid</string>
    <string name="invalid_password">Password tidak valid</string>
    <string name="message_logout">Apa anda yakin ingin keluar ?</string>
    <string name="title_account_already_registered">Akun Sudah Terdaftar</string>
    <string name="title_permission_denied">Izin ditolak</string>
    <string name="title_photo_needed">Foto dibutuhkan</string>
    <string name="title_story_uploaded">Cerita diunggah</string>
    <string name="message_camera_denied">You must permission to open camera</string>
    <string name="story_from">Story from : </string>
    <string name="check_input">Check Your Input</string>
    <string name="input_image_first">Input Your Image First!</string>
    <string name="location_saved">Save Location</string>
    <string name="location_not_found">Location not found</string>
    <string name="title_activity_google_maps">GoogleMapsActivity</string>
</resources>