<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".ui.detaillist.DetailStoryActivity">

    <ImageView
        android:id="@+id/iv_detail_photo"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/image_story" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentTop="true"
        android:id="@+id/parent_progress_bar_layout" />

    <androidx.appcompat.widget.Toolbar
        android:layout_below="@id/parent_progress_bar_layout"
        android:id="@+id/toolbar_status"
        android:layout_width="match_parent"
        android:layout_marginTop="20dp"
        android:layout_height="?attr/actionBarSize"
        app:contentInsetLeft="0dp"
        app:contentInsetStart="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/button_kembali"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginStart="7dp"
                android:src="@drawable/ic_baseline_arrow_back_white"
                android:contentDescription="@string/tombol_kembali" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                app:civ_border_width="2dp"
                android:layout_marginStart="10dp"
                app:civ_border_color="@color/white"
                android:src="@mipmap/ic_launcher" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="13dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_detail_name"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="bottom"
                    android:textSize="19sp"
                    android:text="@string/muzammilul_muttaqin"
                    android:textColor="@android:color/white"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="top"
                    android:text="@string/baru_saja"
                    android:textColor="#eef4f4"
                    android:textSize="14sp" />
            </LinearLayout>

        </LinearLayout>

    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:id="@+id/layout_viewed_by_status"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:gravity="center_horizontal"
        android:background="@color/abu_abu3"
        android:orientation="vertical"
        android:padding="10dp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="0dp">

        <TextView
            android:id="@+id/tv_detail_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:autoLink="all"
            android:text="@string/deskripsi"
            android:textColor="@color/white"
            android:layout_gravity="center_horizontal"
            android:textSize="18sp"/>

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginTop="30dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/ic_baseline_keyboard_arrow_up_white"
            android:contentDescription="@string/icon_balas" />

        <TextView
            android:id="@+id/balas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/balas"
            android:textStyle="bold"
            android:layout_marginBottom="10dp"
            android:textColor="@android:color/white"
            android:layout_gravity="center_horizontal"
            android:textSize="14sp" />
    </LinearLayout>

</RelativeLayout>

