<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.LoginActivity">

    <ImageView
        android:id="@+id/img_login"
        android:layout_width="match_parent"
        android:layout_height="266dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/logo_aplikasi"
        android:src="@drawable/sign_in" />

    <TextView
        android:id="@+id/title_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/img_login"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="0dp"
        android:text="@string/masuk"
        android:textColor="@color/ungu"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txt_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title_login"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        android:text="@string/email"
        android:textColor="@color/black" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout_email"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_email"
        android:layout_marginTop="5dp">

        <com.zam.storyapp.ui.customview.EditTextEmail
            android:id="@+id/edt_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:inputType="textEmailAddress" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/txt_password"
        android:layout_width="wrap_content"
        android:layout_below="@+id/layout_email"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:text="@string/kata_sandi"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout_password"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_password"
        android:layout_marginTop="5dp">

        <com.zam.storyapp.ui.customview.EditTextPassword
            android:id="@+id/edt_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ed_login_email"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <ProgressBar
        android:id="@+id/loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layout_password"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:visibility="gone" />

    <com.zam.storyapp.ui.customview.Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/loading"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:text="@string/masuk" />

    <TextView
        android:id="@+id/txt_blum_punyakun"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_login"
        android:layout_marginStart="20dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/belum_punya_akun"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/btn_daftar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_login"
        android:layout_marginStart="5dp"
        android:layout_marginTop="10dp"
        android:layout_toEndOf="@+id/txt_blum_punyakun"
        android:text="@string/daftar"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:textStyle="bold" />

</RelativeLayout>