<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.story.CameraActivity">

    <androidx.camera.view.PreviewView
        android:id="@+id/viewFinder"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/icon_back"
        android:layout_width="62dp"
        android:layout_height="58dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="@color/transparant"
        android:contentDescription="@string/tombol_kembali"
        android:src="@drawable/ic_baseline_clear_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:background="@color/transparant"
        android:orientation="horizontal"
        android:paddingTop="20dp"
        android:paddingBottom="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageButton
            android:id="@+id/captureImage"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:layout_marginStart="120dp"
            android:layout_marginEnd="40dp"
            android:background="@color/transparant"
            android:contentDescription="@string/capture_image"
            android:src="@drawable/ic_baseline_radio_button_unchecked_24" />

        <ImageButton
            android:id="@+id/switchCamera"
            android:layout_width="59dp"
            android:layout_height="60dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="19dp"
            android:layout_marginEnd="10dp"
            android:background="@color/transparant"
            android:contentDescription="@string/flip_camera"
            android:src="@drawable/ic_baseline_flip_camera" />

    </LinearLayout>

    <TextView
        android:id="@+id/text_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/icon_galeri"
        android:textColor="@color/white"
        android:layout_marginBottom="10dp"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>